--- a/shopfast-react/src/components/css/Login.module.css
+++ b/shopfast-react/src/components/css/Login.module.css
@@ -2,7 +2,8 @@
 
 .loginContainer {
   width: 300px; /* Adjust the width as needed */
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .formGroup {
