Update UI to employ more reactive page

--- a/shopfast-react/src/components/css/Navigation.css
+++ b/shopfast-react/src/components/css/Navigation.css
@@ -1,4 +1,5 @@
 #navbar {
+    z-index: 100; /* This should ensure the navigation bar buttons are always clickable */
     padding: 10px;
     text-align: right;
     position: fixed;
@@ -69,6 +70,10 @@ white text color, etc.) */
 }
 
 body {
-    background-color: #2e2242;
+    background-image: radial-gradient(ellipse at center, black, #171934, #1e2144);
     color: white;
+    margin: 0; /* Remove default body margin to fill the entire viewport */
+    height: 100vh; /* Set body height to 100% of the viewport height */
+    display: flex;
+    flex-direction: column;
 }
