--- a/shopfast-react/src/App.css
+++ b/shopfast-react/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+#policyFooter a {
+  text-decoration: none;
+  color: white;
+  padding: 0.5%;
+}
+
+#policyFooter a:hover {
+  text-decoration: underline;
+}
+
+#reusabilityFeature {
+  width: 80%;
+  margin: 0 auto; /* Center content within its container */
+}
