--- a/shopfast-react/src/components/css/Login.module.css
+++ b/shopfast-react/src/components/css/Login.module.css
@@ -1,4 +1,7 @@
 /* Add these styles to your CSS module file */
+#logoutBtn {
+  display: none;
+}
 
 .loginContainer {
   width: 300px; /* Adjust the width as needed */
@@ -10,13 +13,6 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
-}
-
-.label {
-  flex: 1;
-  text-align: right;
-  padding-right: 10px;
-  margin-top: 5px;
 }
 
 .loginInputs {
@@ -33,9 +29,6 @@
   background-color: #4caf50;
 }
 
-#submitButtonContainer {
-  text-align: center;
-}
 
 #loginForm div {
   padding: 5px;
