Reorganize React components into individual folders, implement barreling, and change slide transition effect to transform translate setting

--- a/speedcart-react/src/components/TransitionSection/TransitionSection.css
+++ b/speedcart-react/src/components/TransitionSection/TransitionSection.css
@@ -16,17 +16,17 @@
 }*/
 
 .leftAlignment.hidden {
-    left: 100%;
+    transform: translateX(100%);
 }
 
 .leftAlignment.show {
-    left: 0;
+    transform: translateX(0);
 }
 
 .rightAlignment.hidden {
-    right: 100%;
+    transform: translateX(-100%);
 }
 
 .rightAlignment.show {
-    right: 0;
+    transform: translateX(0);
 }
