Remove unnecessary CSS and adjust component names and placement for clarity

--- a/speedcart-react/src/components/TransitionSection/TransitionSection.css
+++ b/speedcart-react/src/components/TransitionSection/TransitionSection.css
@@ -30,3 +30,10 @@
 .rightAlignment.show {
     transform: translateX(0);
 }
+
+.transitionSection {
+    display: grid;
+    position: relative;
+    align-content: center;
+    min-height: 100vh;
+}
