Start working on making footer positioning sticky

--- a/speedcart-react/src/components/Footer/Footer.module.css
+++ b/speedcart-react/src/components/Footer/Footer.module.css
@@ -1,3 +1,9 @@
 .rightWhiteBorder {
     border-right: 2px white solid;
 }
+
+.footer {
+    position: sticky;
+    bottom: 0;
+    margin-bottom: 10px;
+}
