--- a/speedcart-react/src/components/Footer/Footer.module.css
+++ b/speedcart-react/src/components/Footer/Footer.module.css
@@ -1,9 +1,19 @@
-.rightWhiteBorder {
-    border-right: 2px white solid;
+.footerContainer {
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    padding: 10px 0;
+    background-color: black;
 }
 
 .footer {
-    position: sticky;
-    bottom: 0;
-    margin-bottom: 10px;
+    display: flex;
+    gap: 10px; /* Optional: Add gap between links if needed */
+}
+
+.rightWhiteBorder {
+    border-right: 2px white solid;
+    padding-right: 10px; /* Optional: Add padding to separate the border from the text */
 }
