--- a/speedcart-react/src/components/Footer/Footer.module.css
+++ b/speedcart-react/src/components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
     position: sticky;
     bottom: 0;
     width: 100%;
-    padding: 10px 0;
+    padding: 1vh 0;
     background-color: black;
 }
 
