--- a/speedcart-react/src/components/Navigation/Navigation.css
+++ b/speedcart-react/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
 #navbar {
     z-index: 100; /* This should ensure the navigation bar buttons are always clickable */
-    padding: 10px;
+    padding: 1.4vh;
     text-align: right;
     position: sticky;
     top: 0;
