--- a/speedcart-react/src/pages/main.module.css
+++ b/speedcart-react/src/pages/main.module.css
@@ -1,13 +1,12 @@
-/* Layout.module.css */
+/* main.module.css */
 
 .fullHeightContainer {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Ensure it takes up the full height of the viewport */
+    height: 90vh; /* Ensure it takes up the full height of the viewport */
 }
 
 .mainContent {
     flex: 1; /* This makes the main content area expand to fill the space */
-    padding: 20px; /* Optional padding */
 }
   
