--- a/speedcart-react/src/components/Footer/Footer.module.css
+++ b/speedcart-react/src/components/Footer/Footer.module.css
@@ -5,6 +5,7 @@
     position: sticky;
     bottom: 0;
     width: 100%;
+    height: 3vh;
     padding: 1vh 0;
     background-color: black;
 }
@@ -12,4 +13,10 @@
 .rightWhiteBorder {
     border-right: 2px white solid;
     padding-right: 10px; /* Optional: Add padding to separate the border from the text */
+}
+
+.reactAppVersion {
+    position: fixed;
+    bottom: 1.1vh;
+    right: 1vh;
 }
