--- a/speedcart-react/src/pages/Dashboard/Dashboard.module.css
+++ b/speedcart-react/src/pages/Dashboard/Dashboard.module.css
@@ -31,3 +31,23 @@
 .deleteIcon:hover {
     color: darkred;
 }
+
+.searchInput {
+    padding: 10px;
+    font-size: 16px;
+    width: 60%;
+    border-radius: 15px;
+    box-sizing: border-box;
+}
+  
+.caseSensitiveLabel {
+    width: 130px;
+    font-size: 14px;
+}
+
+.searchContainer {
+    display: flex;
+    align-items: center;     /* Center vertically   */
+    justify-content: center; /* Center horizontally */
+    margin-top: 2vh;
+}
