--- a/speedcart-react/src/App.css
+++ b/speedcart-react/src/App.css
@@ -8,6 +8,19 @@ body {
   background-attachment: fixed;
 }
 
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.main-content {
+  flex: 1;
+  overflow-y: auto; /* Allow content area to scroll */
+  max-height: calc(100vh - 60px); /* Adjust based on header and footer height */
+}
+
 #policyFooter a {
   text-decoration: none;
   color: white;
@@ -15,13 +28,4 @@ body {
 
 #policyFooter a:hover {
   text-decoration: underline;
-}
-
-#reusabilityFeature {
-  width: 80%;
-  margin: 0 auto; /* Center content within its container */
-}
-
-#HomePage {
-  overflow: hidden;
 }
