--- a/speedcart-react/src/pages/ShoppingListDetail/ShoppingListDetail.module.css
+++ b/speedcart-react/src/pages/ShoppingListDetail/ShoppingListDetail.module.css
@@ -1,3 +1,12 @@
 .noPadding {
     padding: 0;
 }
+
+.flexCenter {
+    display: flex;
+    justify-content: center;
+}
+
+.innerContentArea {
+    width: 90%;
+}
