--- a/speedcart-react/src/components/Modal/Modal.module.css
+++ b/speedcart-react/src/components/Modal/Modal.module.css
@@ -1,4 +1,3 @@
-/* Modal.module.css */
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -27,4 +26,19 @@
     border-radius: 8px;
     z-index: 1001;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.closeButton:hover {
+    color: #aaa;
 }
