--- a/Frontend/speedcart-react/src/pages/ShoppingListDetail/ShoppingListDetail.module.css
+++ b/Frontend/speedcart-react/src/pages/ShoppingListDetail/ShoppingListDetail.module.css
@@ -32,3 +32,38 @@
     max-height: calc(100vh - 60px);
     overflow-y: auto;
 }
+
+/* Styling for Grocery Item table CSS */
+.shoppingListItems {
+    display: table;
+    border-collapse: collapse; /* Optional: Collapse borders for a cleaner look */
+    width: 80%;
+}
+  
+.fieldHeader {
+    display: table-header-group;
+    padding: 8px;
+    margin-bottom: 8px;
+}  
+.fieldHeader > div {
+    display: table-cell;
+    text-align: center;
+}
+
+.row {
+    display: table-row;
+    white-space: nowrap;
+}
+
+.row > * {
+    display: table-cell;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+/* Adjust layout for larger screens */
+@media (min-width: 7px) {
+    .shoppingListItems {
+        width: 65%; /* Reduce table width for larger screens */
+    }
+}
